--- a/.github/workflows/fetch-data.yml
+++ b/.github/workflows/fetch-data.yml
@@ -3,9 +3,12 @@ name: Fetch All Data
 
 on:
   schedule:
-    # Every Monday at 06:00 UTC (07:00 Vienna time)
-    - cron: '0 6 * * 1'
+    # Every Wednesday at 06:00 UTC (07:00 Vienna time)
+    - cron: '0 6 * * 3'
   workflow_dispatch:  # Allow manual trigger
+
+permissions:
+  contents: write
 
 jobs:
   fetch:
@@ -53,4 +56,4 @@ jobs:
           git config user.email github-actions@github.com
           git add -A
           git diff --staged --quiet || git commit -m "chore: update data $(date +%Y-%m-%d)"
-          git push https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}.git data --force
+          git push https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}.git data
